syntax="proto3";
option java_package="com.example.finaldemo.proto.entity";
option java_multiple_files=true;

message AssetCode{
  string name = 1;
  string code = 2;
  string created_ts = 3;
  string updated_ts = 4;
}
